<resources>

    <string name="versionDB">10</string>
    <string name="version">ZOA™ 2019-2022 | Versión: 2.1.2</string>
    <string name="app_name">ZOA</string>
    <string name="rutillasToby">Rutillas Toby</string>
    <string name="bLogin">ACCEDER</string>
    <string name="nomCompe">ZOA</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="menuProfile">Perfil</string>
    <string name="menuAll">Todas</string>
    <string name="menuMyCompetition">Competición</string>
    <string name="competitionsTitle">COMPETICIONES</string>
    <string name="profileHistory">Mi historia</string>
    <string name="profileNotHistory">Aquí aparecerán todas las competiciones en las que has participado.</string>
    <string name="titleLogout">Cerrar sesión y salir</string>
    <string name="logoutText">¿Desea cerrar la sesión?</string>
    <string name="competitionFinishText">FINALIZADA</string>
    <string name="titleDialogRegister">Acceso a la competición:</string>
    <string name="pwdFail">Contraseña incorrecta :(</string>
    <string name="myPointsCurrent">Mi puntuación</string>
    <string name="titleQuestions">PREGUNTAS</string>
    <string name="accept">Aceptar</string>
    <string name="deny">Denegar</string>
    <string name="sendResponse">¿Enviar Respuesta?</string>
    <string name="gpsDisabled">GPS Deshabilitado\nActívalo para ver tu ubicación</string>
    <string name="titleMap">MAPA</string>
    <string name="titleRanking">CLASIFICACIÓN</string>
    <string name="showRanking">VER CLASIFICACIÓN</string>
    <string name="questEnabled">NUEVA PREGUNTA DESBLOQUEADA</string>
    <string name="duplicateScenned">ESTE CÓDIGO YA LO HAS REGISTRADO...</string>
    <string name="getFlagText">CÓDIGO BANDERA REGISTRADO</string>
    <string name="pointsFlag">+10 puntos.</string>
    <string name="endCompetitionExtra">Suerte para la calsificación, pronto sabremos los resultados! </string>
    <string name="find">ENCUENTRA</string>
    <string name="scan">ESCANEA</string>
    <string name="answer">RESPONDE</string>
    <string name="textToStart">Preparados, listos...</string>
    <string name="buttonShowCompe">VER COMPETICIONES</string>
    <string name="hello">Hola 👋</string>
    <string name="welcomeZoa">Antes de nada debes establecer el nombre con el que te verán el resto de usuarios.</string>
    <string name="nowRegisterCompe">Ya estas registrado en una competicion activa</string>
    <string name="notQuestions">No hay ninguna pregunta disponible.\nEscanea los codigos de tipo pregunta para obtener nuevas.</string>
    <string name="titleDialogRankingInfo">Valor de los códigos</string>
    <string name="yellowRankingInfo"><b>1 punto.</b></string>
    <string name="blueRankingInfo"><b>2 puntos.</b></string>
    <string name="redRankingInfo"><b>3 puntos.</b></string>
    <string name="questRankingInfo"><b>6 puntos.</b><i>\n(Pregunta correcta)</i></string>
    <string name="flagRankingInfo"><b>10 puntos.</b><i>\n(Bandera final)</i></string>
    <string name="errorSettingTimeTitle">Configuración de hora invalida</string>
    <string name="errorSettingTimeText">Para usar ZOA debes tener la obtención de hora y zona horaria en modo automático.</string>
    <string name="errorSettingTimeButton">Configurar</string>
    <string name="infoTitle">Aplicación desarrollada por</string>
    <string name="rateApp1">¿TE GUSTA ZOA?</string>
    <string name="rateApp2">Puedes ayudarnos valorando la aplicación en Google Play.</string>
    <string name="close">CERRAR</string>
    <string name="oldVersion"><b>Oh vaya!</b>\nEstas usando una versión antigua. Actualiza la aplicación para continuar... </string>
    <string name="update">ACTUALIZAR</string>
    <string name="getLocation">Obteniendo ubicación</string>
    <string name="noCompetitionAccess">No tienes acceso a esa competición</string>
    <string name="prominentDisclosure">ZOA recopila datos de ubicación para conocer la posición en tiempo real de los jugadores durante las competiciones por motivos de seguridad. La ubicación es obtenida en <b>segundo plano</b> incluso cuando la aplicación está cerrada o no está en uso.</string>
    <string name="prominentDisclosureTitle">Acceso a la ubicación</string>

</resources>
