<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_competitions">

    <fragment
        android:id="@+id/navigation_competitions"
        android:name="com.rutillastoby.zoria.ui.competitions.CompetitionsFragment"
        android:label="@string/menuAll"
        tools:layout="@layout/fragment_competitions" />

    <fragment
        android:id="@+id/navigation_current"
        android:name="com.rutillastoby.zoria.ui.current.CurrentFragment"
        android:label="@string/menuMyCompetition"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rutillastoby.zoria.ui.profile.ProfileFragment"
        android:label="@string/menuProfile"
        tools:layout="@layout/fragment_profile" />
</navigation>
